Implemented basic tooling.

--- a/panel.html
+++ b/panel.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="styles/panel.css">
-    <script src="scripts/panel.js"></script>
+    <link rel="stylesheet" type="text/css" href="build/styles/panel.css">
+    <script src="build/scripts/panel.js"></script>
 </head>
 <body>
 </body>
