--- a/devtools.html
+++ b/devtools.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="scripts/devtools.js"></script>
+    <script src="build/scripts/devtools.js"></script>
 </head>
 </html>
